--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.2",
+    "codemirror": "^6.0.1",
     "highlight.js": "^11.7.0"
   }
 }
